--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>An IT Infrastructure Support Engineer with over 5 years of experience, I specialize in digital transformation, cloud security, and identity management for public sector clients. I have a proven ability to lead cloud adoption initiatives , manage endpoint compliance with Intune and Azure AD , and support large-scale user migrations. My hands-on cloud skills are demonstrated by personal projects on GitHub, such as a GCP application migration using Docker and IAM, and are backed by certifications including Google Cloud Digital Leader and Google IT Support Professional. I am seeking to transition into a cloud-facing customer engineering role, leveraging my technical background and stakeholder experience to support cloud-native architecture and access governance.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -228,31 +228,32 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Certifications</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Google</h4>
+              <p><em>My certifications represent a journey of continuous learning and a deliberate career pivot from foundational development and IT support toward specialized cloud technologies. The recent focus on the Google Cloud, Workspace, and IT Support stack demonstrates my commitment to mastering the Google ecosystem, which is central to my goal of moving into a customer-facing cloud engineering role. This diverse skill set, validated by industry credentials, equips me with a comprehensive understanding of both legacy systems and modern cloud architecture, enabling me to effectively support clients through their digital transformation.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Google IT Support Professional Certificate</li>
+                <li>Google Workspace Admin Fundamentals</li>
+                <li>Google Cloud Digital Leader</li>
+                <li>Advanced Premium IT Admin Features</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Msc &amp; Data Science</h4>
+              <h5>2022</h5>
+              <p><em>Ulster University, Belfast, Northern Ireland</em></p>
+
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Bachelor of Engineering &amp; Computer Science</h4>
+              <h5>2016</h5>
+              <p><em>Anna University, Tamil Nadu, India</em></p>
+             
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -260,26 +261,26 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>IT Support Engineer / Acting Project Manager</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Shared Technology Services, London, United Kingdom </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Supported and coordinated large-scale digital transformation initiatives across four London councils, including the migration of 3,000+ users to cloud productivity platforms and the deployment of 4,000 Windows 11 laptops.</li>
+                <li>Acted as the primary contact for de-escalating user concerns, successfully managing sensitive communications and maintaining an estimated 95% positive user satisfaction rate.</li>
+                <li>Mentored junior technicians on shared service protocols, improving their ticket resolution efficiency for council-related issues by an estimated 15%.</li>
+                <li>Acted as a project lead for key initiatives: attended stakeholder meetings, deployed field engineers, tracked risks, and ensured secure project delivery aligned with organizational goals and compliance standards.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Freelance PHP Developer</h4>
+              <h5>2018 - 2020</h5>
+              <p><em>Microcosm Integrated Solutions , Bangalore, India</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Provided L2 technical support to 500 users, resolving access and connectivity issues and achieving a 15% improvement in average ticket resolution time.</li>
+                <li>Developed internal documentation for incident resolution that was adopted by the support team and led to a 25% reduction in escalations for common issues.</li>
+                <li>Acted as the primary contact for de-escalating user concerns, successfully managing sensitive communications and maintaining an estimated 95% positive user satisfaction rate. </li>
+        
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -290,6 +291,25 @@
       </div>
 
     </section><!-- /Resume Section -->
+
+      </div></div>
+
+      </div>
+
+    </div>
+
+    <div class="text-center" style="padding-top: 30px;" data-aos="fade-up">
+      <p>For the full version of my resume, please click below to download.</p>
+      <a href="assets/Your_Resume_File.pdf" 
+   class="btn" 
+   style="background-color: #4CA4D4; border-color: #4CA4D4; color: #ffffff;" 
+   download>
+   Download Full Resume
+</a>
+    </div>
+
+</section><section id="portfolio" class="portfolio section light-background">
+
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section light-background">
