adding new section for my journey

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Certifications</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -102,7 +102,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/sanjay.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <p class="fst-italic py-3">
@@ -295,7 +295,7 @@
 
           <div class="text-center" style="padding-top: 30px;" data-aos="fade-up">
       <p>For the full version of my resume, please click below to download.</p>
-      <a href="assets/Your_Resume_File.pdf" 
+      <a href="https://brand.godaddy.com/?accountId=c8972529-46d9-11f0-8686-7cd30aca54d6#my-photo" 
    class="btn" 
    style="background-color: #4CA4D4; border-color: #4CA4D4; color: #ffffff;" 
    download>
@@ -334,7 +334,7 @@
                 <div class="portfolio-info">
                   <h4>Cloud IAM & Endpoint Security Project</h4>
                   <p>Designed multi-layered security using GCP IAM and device compliance rules.</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="iam-security-project.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -346,7 +346,7 @@
                 <div class="portfolio-info">
                   <h4>Google Workspace Admin Project</h4>
                   <p>Configured a secure, automated Google Workspace environment for a business.</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/product-1.jpg" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="workspace-admin-project.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -358,7 +358,7 @@
                 <div class="portfolio-info">
                   <h4>GCP Application Migration & IAM Security Project</h4>
                   <p>Deployed a containerized Python application on GCP with secure IAM.</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/branding-1.jpg" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="gcp-migration-project.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -369,7 +369,7 @@
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Incident Response Runbook</h4>
-                  <p>Simulated a phishing incident response, creating a detailed runbook.</p>                  <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>Simulated a phishing incident response, creating a detailed runbook.</p>                  <a href="assets/img/portfolio/books-1.jpg" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="incident-response-project.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -456,114 +456,92 @@
     </section><!-- /Services Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section light-background">
+    <section id="contact" class="contact section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+        <h2>My Journey</h2>
+        <p>Beyond the desk: Documenting my journey through tech talks, training sessions, community events, and professional milestones</p>
+    </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+            <div class="col-12">
+                <div class="gallery-container">
+                    <!-- Navigation Arrows -->
+                    <button class="navigation-arrows nav-left" onclick="previousSlide()">
+                        <i class="bi bi-chevron-left"></i>
+                    </button>
+                    <button class="navigation-arrows nav-right" onclick="nextSlide()">
+                        <i class="bi bi-chevron-right"></i>
+                    </button>
+                    
+                    <!-- Gallery Grid -->
+                    <div class="gallery-grid" id="gallery-grid">
+                        <!-- Lead -->
+                        <div class="gallery-item" data-aos="fade-up" data-aos-delay="200">
+                            <img src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1926&q=80" alt="Leadership Presentation">
+                            <div class="gallery-label">Lead</div>
+                            <div class="gallery-overlay">
+                                <h5>Leading with Vision</h5>
+                                <p>Empowering others through confident leadership and clear communication.</p>
+                            </div>
+                        </div>
 
-        <div class="swiper init-swiper">
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              },
-              "breakpoints": {
-                "320": {
-                  "slidesPerView": 1,
-                  "spaceBetween": 40
-                },
-                "1200": {
-                  "slidesPerView": 3,
-                  "spaceBetween": 1
-                }
-              }
-            }
-          </script>
-          <div class="swiper-wrapper">
+                        <!-- Collaborate -->
+                        <div class="gallery-item" data-aos="fade-up" data-aos-delay="300">
+                            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Team Collaboration">
+                            <div class="gallery-label">Collaborate</div>
+                            <div class="gallery-overlay">
+                                <h5>Collaborative Excellence</h5>
+                                <p>Building strong partnerships and fostering teamwork across all levels.</p>
+                            </div>
+                        </div>
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
-              </div>
-            </div><!-- End testimonial item -->
+                        <!-- Innovate -->
+                        <div class="gallery-item" data-aos="fade-up" data-aos-delay="400">
+                            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Innovation Presentation">
+                            <div class="gallery-label">Innovate</div>
+                            <div class="gallery-overlay">
+                                <h5>Innovation Drive</h5>
+                                <p>Pushing boundaries and creating breakthrough solutions for tomorrow.</p>
+                            </div>
+                        </div>
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-              </div>
-            </div><!-- End testimonial item -->
+                        <!-- Strategize -->
+                        <div class="gallery-item" data-aos="fade-up" data-aos-delay="500">
+                            <img src="https://images.unsplash.com/photo-1553877522-43269d4ea984?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Strategic Planning">
+                            <div class="gallery-label">Strategize</div>
+                            <div class="gallery-overlay">
+                                <h5>Strategic Thinking</h5>
+                                <p>Developing comprehensive strategies for sustainable growth and success.</p>
+                            </div>
+                        </div>
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-              </div>
-            </div><!-- End testimonial item -->
+                        <!-- Empower -->
+                        <div class="gallery-item" data-aos="fade-up" data-aos-delay="600">
+                            <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Empowerment Session">
+                            <div class="gallery-label">Empower</div>
+                            <div class="gallery-overlay">
+                                <h5>Empowering Others</h5>
+                                <p>Nurturing talent and providing opportunities for personal and professional growth.</p>
+                            </div>
+                        </div>
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
+                        <!-- Impact -->
+                        <div class="gallery-item" data-aos="fade-up" data-aos-delay="700">
+                            <img src="https://images.unsplash.com/photo-1559136555-9303baea8ebd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Making Impact">
+                            <div class="gallery-label">Impact</div>
+                            <div class="gallery-overlay">
+                                <h5>Creating Impact</h5>
+                                <p>Making meaningful differences in our community and industry landscape.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-      </div>
+    </div>
 
     </section><!-- /Testimonials Section -->
 
