--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4">
             <div class="col-lg-4 about-img-container">
-                <img src="assets/img/sanjay.jpg" class="img-fluid" alt="Sanjay">
+                <img src="assets/img/sanjay-1.jpg" class="img-fluid" alt="Sanjay">
             </div>
             <div class="col-lg-8 content">
                 <p class="fst-italic">
