--- a/index.html
+++ b/index.html
@@ -616,6 +616,8 @@
     <input type="hidden" name="_subject" value="New message from portfolio!">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="table">
+    <!-- ADD THIS LINE -->
+    <input type="hidden" name="_next" value="thank-you.html">
   </form>
 </div><!-- End Contact Form -->
 
@@ -638,7 +640,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Sanjay Krishnan</a>
+        Designed by Sanjay Krishnan
       </div>
     </div>
 
