updated for form entry

--- a/index.html
+++ b/index.html
@@ -616,10 +616,9 @@
     <input type="hidden" name="_subject" value="New message from portfolio!">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="table">
-    <!-- ADD THIS LINE -->
-    <input type="hidden" name="_next" value="thank-you.html">
+    <!-- REMOVED THE _next FIELD -->
   </form>
-</div><!-- End Contact Form -->
+</div>
 
         </div>
 
