changes for form

--- a/index.html
+++ b/index.html
@@ -616,9 +616,8 @@
     <input type="hidden" name="_subject" value="New message from portfolio!">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="table">
-    <!-- REMOVED THE _next FIELD -->
   </form>
-</div>
+</div><!-- End Contact Form -->
 
         </div>
 
