updated with access key

--- a/index.html
+++ b/index.html
@@ -587,7 +587,10 @@
           </div>
 
 <div class="col-lg-7">
-  <form action="https://formsubmit.co/sacsanjay@gmail.com" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+  <form action="https://api.web3forms.com/submit" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+    <!-- Your Web3Forms access key -->
+    <input type="hidden" name="access_key" value="aa39813c-de21-46d4-9a67-0aab1b57c1d3">
+    
     <div class="row gy-4">
       <div class="col-md-6">
         <label for="name-field" class="pb-2">Your Name</label>
@@ -612,10 +615,6 @@
         <button type="submit">Send Message</button>
       </div>
     </div>
-    <!-- Hidden fields for FormSubmit -->
-    <input type="hidden" name="_subject" value="New message from portfolio!">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_template" value="table">
   </form>
 </div><!-- End Contact Form -->
 
