--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
           <div class="text-center" style="padding-top: 30px;" data-aos="fade-up">
       <p>For the full version of my resume, please click below to download.</p>
-      <a href="https://brand.godaddy.com/?accountId=c8972529-46d9-11f0-8686-7cd30aca54d6#my-photo" 
+      <a href="https://drive.google.com/file/d/10tu4jOuqLX4MWL0PGvWBF3QPGVzXRB-2/view?usp=drive_link" 
    class="btn" 
    style="background-color: #4CA4D4; border-color: #4CA4D4; color: #ffffff;" 
    download>
