target-blank and open in new page

--- a/index.html
+++ b/index.html
@@ -287,15 +287,16 @@
 
       </div>
 
-          <div class="text-center" style="padding-top: 30px;" data-aos="fade-up">
-      <p>For the full version of my resume, please click below to download.</p>
-      <a href="assets/documents/Sanjay_Krishnan_Resume.pdf" 
-   class="btn" 
-   style="background-color: #4CA4D4; border-color: #4CA4D4; color: #ffffff;" 
-   download>
-   Download Full Resume
-</a>
-    </div>
+      <div class="text-center" style="padding-top: 30px;" data-aos="fade-up">
+    <p>For the full version of my resume, please click below.</p>
+    <a href="assets/documents/Sanjay_Krishnan_Resume.pdf" 
+       class="btn" 
+       style="background-color: #4CA4D4; border-color: #4CA4D4; color: #ffffff; padding: 10px 30px; text-decoration: none; border-radius: 5px; display: inline-block;" 
+       target="_blank"
+       rel="noopener noreferrer">
+       <i class="bi bi-file-earmark-pdf" style="margin-right: 8px;"></i>View Full Resume
+    </a>
+      </div>
 
     </section><!-- /Resume Section -->
 
