--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
             <!-- End Icon Title -->
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Google IT Support Professional</a></h4>
+              <h4 class="title"><a href="https://www.coursera.org/account/accomplishments/professional-cert/certificate/HCUIR3LQ9QG4" class="stretched-link" target="_blank" rel="noopener noreferrer">Google IT Support Professional</a></h4>
               <p class="description">This certification from Google via Coursera strengthened my skills in troubleshooting, networking, OS, system administration, and IT support with hands-on, real-world technical training.</p>
             </div>
           </div>
@@ -417,7 +417,7 @@
             </div>
           <!-- End Icon Title -->
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Google Cloud Digital Leader</a></h4>
+              <h4 class="title"><a href="https://www.credly.com/badges/f2a70b9a-b34e-49c4-a1ec-c9b23758860a/linked_in_profile" class="stretched-link" target="_blank" rel="noopener noreferrer">Google Cloud Digital Leader</a></h4>
               <p class="description">This certification from Google via Coursera demonstrates foundational knowledge of cloud technologies, GCP services, and digital transformation to support informed business and technical decisions.</p>
             </div>
           </div><!-- End Service Item -->
@@ -430,7 +430,7 @@
           </div>            
             <!-- End Icon Title -->
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Workspace Admin Fundamentals</a></h4>
+              <h4 class="title"><a href="https://skillshop.exceedlms.com/student/award/hqGH4D47RX3m7ooSEXuwE9Mh" class="stretched-link" target="_blank" rel="noopener noreferrer">Workspace Admin Fundamentals</a></h4>
               <p class="description">This certification from Google via Coursera covered Workspace Admin fundamentals, including user management, organizational units, security settings, group policies, and best practices for cloud collaboration.</p>
             </div>
           </div><!-- End Service Item -->
@@ -443,7 +443,7 @@
           </div>
             <!-- End Icon Title -->
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Foundations of Project Management</a></h4>
+              <h4 class="title"><a href="https://www.coursera.org/account/accomplishments/verify/8XLKATM6GCQ4" class="stretched-link" target="_blank" rel="noopener noreferrer">Foundations of Project Management</a></h4>
               <p class="description">This certification from Google via Coursera introduced core project management concepts, including project lifecycles, stakeholder communication, risk management, and tools to effectively lead successful projects.</p>
             </div>
           </div><!-- End Service Item -->
